# ipm-python

ipm/: ipm_lp_solver_exercises.md  ipm_multi_gpu_cholesky_exercises.md  linear_solver.py  solver.py  test_solver.py
ipm-pdhg/: README.md  barrier_pdhg.py
ipm/cc/: README.md  multigpu_inexact_ipm_note.md
ipm/cc/experiments/: benchmark_solvers.py  validate_numerics.py
ipm/cc/inexact_ipm/: __init__.py  ipm_solver.py  linear_solver.py  lp_problem.py  utils.py
ipm/cc/paper/: main.aux  main.bbl  main.out  main.tex  references.bib
ipm/cc/tests/: __init__.py  test_ipm_solver.py  test_linear_solver.py  test_lp_problem.py
pdlp/: hipdlp_python_prototype.md  pyproject.toml  setup.py
pdlp/src/hipdlp_proto/: __init__.py  arrays.py  cli.py  data.py  generators.py  heuristics.py  io_highs.py  operators.py  pdhg.py  residuals.py  scaling.py  stopping.py  timing.py
pdlp/src/hipdlp_proto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pdlp/tests/: test_generators.py  test_highs_io.py  test_operators.py  test_pdhg_smoke.py
